# pytest-playwright-enhanced

./: .coveragerc  .pre-commit-config.yaml  404.html  CHANGELOG.rst  CONTRIBUTING.rst  README.md  index.html  mkdocs.yml  prepare_release  pyproject.toml  pytest.ini  sitemap.xml  tox.ini
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: test_and_coverage.yml
changes/: 6.bugfix.md  6.feature.md  8.feature.md  9.feature.rst
cli/: index.html
docs/: fixtures.md  index.md
docs/docs/: index.md
docs/stylesheets/: extra.css
fixtures/: index.html
hooks/: index.html
install/: index.html
pytest_playwright_enhanced/: __init__.py  actions.py  browser.py  browser_strategy.py  const.py  dir.py  exceptions.py  hooks.py  launch_kwargs_strategy.py  markers.py  plugin.py  types.py  utils.py
pytest_playwright_enhanced/pages/: __init__.py  page.py
scripts/: dependencies.py  prepare_release
scripts/scripts/: dependencies.py
search/: search_index.json
stylesheets/: extra.css
tests/: conftest.py  test_addoptions.py  test_browser.py  test_fixtures.py  utils.py
tests/integration/: test_artifacts.py  test_base_url.py  test_browser.py  test_context.py  test_ctx_kwargs.py  test_debug.py  test_device.py  test_drivers_env.py  test_emulation.py  test_fixtures.py  test_headless.py  test_hooks.py  test_launching.py  test_output.py  test_parameterisation.py  test_playwright.py  test_root_url.py  test_slow_mo.py  test_stdout.py  test_throttle.py
tests/unit/: test_constants.py  test_exceptions.py  test_pages.py  test_strategy.py  test_utils.py
